--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-.header-bg {
+.page-header {
   background-color: #3772ad;
   color: white;
+  padding: 0.5em 1em 0.5em 1em;
+}
+
+body {
+  background-color: snow;
 }
